@@ -22,12 +22,12 @@
     </properties>
     <build>
         <plugins>
-            <!-- Other plugins ... -->
+        <!-- Other plugins ... -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <argLine>-Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=8000</argLine>
+                    <argLine>-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=localhost:8000 -Djdk.attach.allowAttachSelf=true</argLine>
                 </configuration>
             </plugin>
         </plugins>
